2024-10-07  Per Abrahamsen  <pa@plen.ku.dk>

	* src/daisy/crop/root/rootdens_local.C
	(RootdensLocal::internal_growth): Handle I_tot == 0.

2024-09-18  Per Abrahamsen  <pa@plen.ku.dk>

	* src/daisy/crop/production.C (ExfoliationFac): Fix unit.

2024-06-20  Per Abrahamsen  <pa@plen.ku.dk>

	* src/daisy/upper_boundary/bioclimate/svat_ssoc.C
	(SVAT_SSOC::calculate_conductances): Fix argument order (reported
	by Delhez Laura <Laura.Delhez@uliege.be>).

2024-05-01  Per Abrahamsen  <pa@plen.ku.dk>

	* test/dai-unit-tests/CMakeLists.txt: Change 'dai_file' to 'name'
	* src/object_model/oldunits.C (Oldunits::standard_conversions):
	Change "CO_2" to "CO2".

2024-03-20  Per Abrahamsen  <pa@plen.ku.dk>

	* Version 6.47 released.

2024-03-20  Per Abrahamsen  <pa@plen.ku.dk>

	* adsorption_vS_S.C (vS_S_old): Renamed from "vS_S".
	(vS_S): Made S_planar, S_edge, K_planar, K_edge parameters.
	V_planar, V_edge: unit should per volume space, not per volume soil.
	(vS_S_Hansen): Old parameters.
	(vS_S_Styczen): New parameters.

2024-03-18  Per Abrahamsen  <pa@plen.ku.dk>

	* Version 6.46 released.

2024-03-18  Per Abrahamsen  <pa@plen.ku.dk>

	* parser_file.C (erase): New top level keyword.

	* clayom.C (load_frame): New function.
	* clayom_biomod.C ("cite"): Set value.

2024-02-27  Per Abrahamsen  <pa@plen.ku.dk>

	* reaction_shoot.C (load_frame): Added second citation.

2024-01-22  Per Abrahamsen  <pa@plen.ku.dk>

	* Version 6.45 released.

2024-01-22  Per Abrahamsen  <pa@plen.ku.dk>

	* secondary.C (use_secondary): Now supported by the 'pressure'
	model.

2024-01-19  Per Abrahamsen  <pa@plen.ku.dk>

	* lib/log.dai ("Groundwater"): Fix 'h_aquifer' path.

2023-12-07  Per Abrahamsen  <pa@plen.ku.dk>

	* hydraulic_B_C_inverse.C (Theta_wp): Use 20 um instead of 50 um
	as silt limit.

2023-11-21  Per Abrahamsen  <pa@plen.ku.dk>

	* Version 6.44 released.

2023-11-21  Per Abrahamsen  <pa@plen.ku.dk>

	* wsource_weather.C (tick_weather): Force new day if daily values
	are uninitialized.
