@@ -2416,15 +2416,15 @@ Use \"*\" to log all added organic matter matter.")
   (where "${colfid}drain_sink_water.dlf")
   (when hourly)
   (entries (array (path column "${column}" SoilWater S_drain)
-                  (handle sum)
-                  (dimension "g/cm^3"))))
+		  (spec fixed SoilWater S_drain)
+                  (handle sum))))
 
 (deflog "Biopore Drain Sink Water" column
   (where "${colfid}biopore_drain_sink_water.dlf")
   (when hourly)
   (entries (array (path column "${column}" SoilWater S_p_drain)
-                  (handle sum)
-                  (dimension "g/cm^3"))))
+		  (spec fixed SoilWater S_p_drain)
+                  (handle sum))))
 
 (deflog "Drain Sink NO3" column
   (where "${colfid}drain_sink_NO3.dlf")
@@ -2432,8 +2432,7 @@ Use \"*\" to log all added organic matter matter.")
   (entries (array (path column "${column}" Chemistry "*" trace NO3 S_soil_drain)
 		  (spec chemical default S_soil_drain)
                   (handle sum)
-		  (negate true)
-                  (dimension "g/cm^3"))))
+		  (negate true))))
 
 (deflog "Drain Sink NH4" column
   (where "${colfid}drain_sink_NH4.dlf")
@@ -2441,8 +2440,7 @@ Use \"*\" to log all added organic matter matter.")
   (entries (array (path column "${column}" Chemistry "*" trace NH4 S_soil_drain)
 		     (spec chemical default S_soil_drain)
                   (handle sum)
-		  (negate true)
-                  (dimension "g/cm^3"))))
+		  (negate true))))
 
 (deflog "Soil Water Content" column
   (where "${colfid}soil_water_content.dlf")
@@ -2458,25 +2456,21 @@ Use \"*\" to log all added organic matter matter.")
   (entries (number (path column "${column}" Chemistry "*" trace NO3 spray)
 		   (spec chemical default spray)
                    (handle sum)
-                   (tag "Surface-NO3")
-                   (dimension "kg N/ha"))
+                   (tag "Surface-NO3"))
            (interval (path column "${column}"
 			   Chemistry "*" trace NO3 S_external)
 		     (spec chemical default S_external)
 		     (handle sum)
-		     (tag "Surface-NO3")
-		     (dimension "kg N/ha"))
+		     (tag "Surface-NO3"))
            (number (path column "${column}" Chemistry "*" trace NH4 spray)
 		   (spec chemical default spray)
                    (handle sum)
-                   (tag "Surface-NH4")
-                   (dimension "kg N/ha"))
+                   (tag "Surface-NH4"))
            (interval (path column "${column}"
 			   Chemistry "*" trace NH4 S_external)
 		     (spec chemical default S_external)
 		     (handle sum)
-		     (tag "Soil NH4")
-		     (dimension "kg N/ha"))
+		     (tag "Soil NH4"))
            (number (path column "${column}" OrganicMatter "*" fertilized_N)
                    (handle sum)
                    (tag "Org_N")
