@@ -1,3 +1,14 @@
+2025-01-17  Per Abrahamsen  <pa@plen.ku.dk>
+
+	* src/daisy/chemicals/adsorption_langmuir.C (C_to_M, M_to_C): Fix.
+
+2025-01-16  Per Abrahamsen  <pa@plen.ku.dk>
+
+	* lib/log.dai ("Drain Sink Water", "Biopore Drain Sink Water"):
+	Fix units.
+	("Drain Sink NO3", "Drain Sink NH4"): Remove dimension.
+	("Fertilizer"): Add spec.
+
 2024-10-07  Per Abrahamsen  <pa@plen.ku.dk>
 
 	* src/daisy/crop/root/rootdens_local.C
